# ConceptX_Converter

./: Cargo.toml  README.md  main.py
.github/workflows/: CI.yml
data/: activations.json
examples/: main.py
src/: lib.rs  main.rs
src/converter/: filter.rs  mod.rs  reader.rs  writer.rs
